Release 1.0.1